tests/compile-fail/compile_fail__encoding_error_in_meta.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: string encoding error
  ┌─ <input>:6:17
  │
6 │     stage_name: "⏄",
  │                 ^^^ cannot be encoded using 'Shift_JIS'


